# outman

./: .gitignore  CMakeLists.txt  README.md
outman/: CMakeLists.txt  outman.cpp
outman/include/outman/: all_strats.hpp  outman.hpp  output_manager.hpp
outman/include/outman/data/: isaveable_data.hpp
outman/include/outman/outloggers/: cout_logger.hpp  iout_logger.hpp
outman/include/outman/strategies/: async_csv_file_strat.hpp  async_save_strat_logs.hpp  base_saving_strategy.hpp  dummy_saving_strategy.hpp  isaving_strategy.hpp  logging_csv_writer.hpp  wrapped_async_csv_saving_strategy.hpp
tests/: CMakeLists.txt
tests/test_csv_async/: CMakeLists.txt  main.cpp
